--- a/ecmp.html
+++ b/ecmp.html
@@ -369,10 +369,10 @@
             <label>Your ISP Line</label><br>
             <select style="margin-top:10px; width:100%" id="wan-list" onchange="myFunctionOuput()">
               <option value="line2">2 Line ISP</option>
-              <option value="line3" disabled>3 Line ISP *premium services</option>
-              <option value="line4" disabled>4 Line ISP *premium services</option>
-              <option value="line5" disabled>5 Line ISP *premium services</option>
-              <option value="line6" disabled>6 Line ISP *premium services</option>
+              <option value="line3" disabled>3 Line ISP *premium service</option>
+              <option value="line4" disabled>4 Line ISP *premium service</option>
+              <option value="line5" disabled>5 Line ISP *premium service</option>
+              <option value="line6" disabled>6 Line ISP *premium service</option>
               <option value="line7" disabled>ISP with different Speed (premium service)</option>
             </select>
           </div>
