--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -374,7 +374,7 @@
           <label>Select Number Your ISP Line</label>
           <select style="margin-top:10px" id="wan-list" onchange="myFunctionShowHide(); myFunction()">
             <option value="line-2">2 Line ISP</option>
-            <option value="line-3">3 Line ISP</option>
+            <option value="line-3" disabled>3 Line ISP *premium service</option>
             <option value="line-4" disabled>4 Line ISP *premium service</option>
             <option value="line-5" disabled>5 Line ISP *premium service</option>
             <option value="line-6" disabled>6 Line ISP *premium service</option>
