--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -4,13 +4,13 @@
     <meta charset='utf-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Bonding Interface / Link Aggregation Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik Bonding Interface / Link Aggregation Generator - BuanaNETPBun.Github.io' name='description'/>
+    <meta content='Mikrotik Bonding Interface / Link Aggregation Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
     <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'/>
     <meta content='index, follow, noodp' name='robots'/>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
-    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/111255763-464bb280-864a-11eb-9571-ff7cbdd317df.png">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/152408487-f1aec8ee-f0f7-468c-ad12-8f7c4ddb0f75.png">
     <meta property="og:image:alt" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/remote-ip-public-static.html">
