--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -390,7 +390,7 @@
           <input type="checkbox" id="R1-failover" onclick="myCheck()">
           <label for="R1-failover"> Enable ARP Monitoring</label>
           <div style="padding-top:20px"></div>
-          <span style="margin-left:2px">Copy-Paste in Terminal Mikrotik - A</span>
+          <span style="margin-left:2px"><b>Copy-Paste in Terminal Mikrotik - A</b></span>
           <div class="list-mangle">
             <div id="list-output-r1">
               <span style="color:#ff6600;">
@@ -435,7 +435,7 @@
           <input type="checkbox" id="R2-failover" onclick="myCheck()">
           <label for="R2-failover"> Enable ARP Monitoring</label>
           <div style="padding-top:20px"></div>
-          <span style="margin-left:2px">Copy-Paste in Terminal MikroTik - B</span>
+          <span style="margin-left:2px"><b>Copy-Paste in Terminal MikroTik - B</b></span>
           <div class="list-mangle">
             <div id="list-output-r2">
               <span style="color:#ff6600;">
