--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -88,7 +88,7 @@
       padding: 10px;
       background-color:#ddd;
       border-bottom:0px solid #bbb; 
-      border-radius: 5px 5px 0 0 ;  
+      border-radius: 5px;  
       }
       .footer{
       font-size:13px;
