--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ cursor: pointer;
         <div class="gcse-searchresults"></div>
       </div>
 		<h1>MikroTik Router<span style="font-style: italic;">OS</span> Script and Tools</h1>
-		<h3>MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
+		<h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 		<p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a> - Search Engine for find all MikroTik RouterOS Script</p>  
 		<h3>MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>    
@@ -434,12 +434,12 @@ cursor: pointer;
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Website Script Generator</a> - Mikrotik Block Website Script Generator Use DNS, Layer-7, Filter or RAW Content, Filter or RAW TLS-Host, Address List and Web Proxy</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
-		<h3>MIKROTIK BATCH TOOLS BY BUANANET.PBUN</h3>
+		<h3>// MIKROTIK BATCH TOOLS BY BUANANET.PBUN</h3>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a> - Free DNS Ping Test From DOS Batch</p>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a> - Just a simple test for routeros port scanning</p>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a> - Easy backup mikrotik (.backup) only use BATCH Windows</p>
 		<p><a target="_blank"  href="https://github.com/buananetpbun/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a> - Restore Winbox Sessions to Default for Mikrotik with Bacth File</p>
-		<h3>MIKROTIK TOOLS OFFICIAL</h3>
+		<h3>// MIKROTIK TOOLS OFFICIAL</h3>
 		<p><a target="_blank"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a> - Winbox 64 bit is a small utility that allows administration of MikroTik RouterOS using a fast and simple GUI t is a native Win64 binary</p>
 		<p><a target="_blank"  href="https://mt.lv/winbox">Winbox-32 (32bit)</a> - Winbox 32 bit is a small utility that allows administration of MikroTik RouterOS using a fast and simple GUI t is a native Win32 binary</p>
 		<p><a target="_blank"  href="https://mikrotik.com/download">The Dude</a> - The Dude network monitor is a new application by MikroTik which can dramatically improve the way you manage your network environment</p>
@@ -447,19 +447,19 @@ cursor: pointer;
 		<p><a target="_blank"  href="https://mt.lv/btest">Bandwidth Test</a> - The Bandwidth Tester can be used to measure the throughput to another MikroTik router (either wired or wireless) and thereby help to discover network "bottlenecks".</p>
 		<p><a target="_blank"  href="https://i.mt.lv/files/exe/MT_Syslog.exe">MT Syslog Daemon</a> - MT Syslog Daemon Is a server log system, to receive log messages from the router</p>
 		<p><a target="_blank"  href="https://mikrotik.com/download/TrafficCounter.zip">MT Traffic Counter</a> - This traffic monitor can be used to monitor traffic running on an interface on a router.</p>
-		<h3>MIKROTIK MOBILE TOOLS OFFICIAL</h3>
+		<h3>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
 		<p><a target="_blank"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">Mikrotik Winbox iPhone</a> - Use the MikroTik smartphone app on iPhone or IOS to configure your router in the field, or to apply the most basic initial settings for your MikroTik home access point.</p>
 		<p><a target="_blank"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.tikapp&hl=in">Mikrotik Winbox Android</a> - Use the MikroTik smartphone app on Android to configure your router in the field, or to apply the most basic initial settings for your MikroTik home access point.</p>
-		<h3>MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
+		<h3>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
 		<p><a target="_blank"  href="https://mikrotik.com/download">Mikrotik.com/download</a> - If you are already running RouterOS, upgrading to the latest version can be done by clicking on "Check For Updates" in QuickSet or System > Packages menu in WebFig or WinBox. </p>
 		<p><a target="_blank"  href="http://www.routeros.co.id">Routeros.co.id</a> - Free Download Mikrotik RouterOS all Version</p>
-		<h3>MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
+		<h3>// MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
 		<p><a target="_blank"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a> - This application can be used to calculate the recommended antenna height, taking into account the frequency used</p>
 		<p><a target="_blank"  href="https://shop.duxtel.com.au/article_info.php?articles_id=53">MikroTik Link Planner</a> - MikroTik Link Planner To calculate what maximum link speed you can achieve using specific equipment</p>
 		<p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=wireless_abg.zip">Wireless MiniPCI A/B/G</a> - Mikrotik Driver Wireless MiniPCI A/B/G For windows.</p>
 		<p><a target="_blank"  href="https://mikrotik.com/calculator">Wireless link calculator (need login)</a> - a tool for calculating the link (link posibility) of wireless connections from MikroTik devices</p>
 		<p><a target="_blank"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a> - Create frequency and other locks package</p>
-		<h3>MIKROTIK OTHER TOOLS LIKE CALCULATOR AND MONITOR</h3>
+		<h3>// MIKROTIK OTHER TOOLS LIKE CALCULATOR AND MONITOR</h3>
 		<p><a target="_blank"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a> - Cacti is an open source, web-based network monitoring application and is a complete network graphic creation solution designed to take advantage of the capabilities of RRDTool functions as data storage and graphics creation.</p>
 		<p><a target="_blank"  href="http://www.routerboard.co.id/">RouterBoard Comparison Table</a> - Simple Tool For Comparison Mikrotik Routerboard</p>
 		<p><a target="_blank"  href="http://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a> - Simple Tool For Comparison Mikrotik Routerboard (chinese)</p>
@@ -467,7 +467,7 @@ cursor: pointer;
 		<p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a> - To see the Mikrotik that is directly connected to your computer, and telnet based on a mac address (no need for an ip address)</p>
 		<p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a> - Traffic Sniffer stream reader for Linux</p>
 		<p><a target="_blank"  href="https://forum.mikrotik.com/viewtopic.php?t=77193">ATTIX5 Traffic Monitor</a> - Attix5 - Traffice Real-Time Monitor Analysis Mikrotik</p>
-		<h3>MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER CUSTOM TOOLS</h3>
+		<h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER CUSTOM TOOLS</h3>
 		<p><a target="_blank"  href="https://freeradius.org">FREERADIUS</a> - FreeRADIUS is a modular, high performance free RADIUS suite developed and distributed under the GNU General Public License, version 2, and is free for download and use. The FreeRADIUS Suite includes a RADIUS server, a BSD-licensed RADIUS client library, a PAM library, an Apache module, and numerous additional RADIUS related utilities and development libraries.</p>
 		<p><a target="_blank"  href="http://dmasoftlab.com">DMA Radius Manager</a> - DMA Radius Manager is a easy to use administration system for Mikrotik, Cisco, StarOS, Chillispot,DD-WRT, pfSense NAS devices and DOCSIS CMTS. It provides centralized authentication, accounting and billing functions.</p>
 		<p><a target="_blank"  href="https://billingku.net">Billingku</a> - BILLINGKU is a website and android based internet billing data management application. This application has been integrated with the payment gateway system, the mikrotik api system, the full whatsapp gateway system, and many others.</p>
