--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ cursor: pointer;
 		<h3>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h3>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 		<p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a> - Search Engine for find all MikroTik RouterOS Script</p>  
-		<h3>MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>    
+		<h3>// MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>    
 		<b>☰ ROUTE + MANGLE</b>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>
