--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -360,7 +360,7 @@
       </div>
       <div class="sidebar">
         <div style="padding:20px; text-align:center">
-          Bonding is a technology that allows the aggregation of more than one ethernet interface and combine them into one virtual link so that we will get greater bandwidth throughput. as an example your router ether1 only support 100Mbps, you can bonding with ether2 and finaly you can get more speed to 200Mbps (Support LAN only, not for WAN or Wireless)
+          Bonding is a technology that allows the aggregation of more than one ethernet interface and combine them into one virtual link so that we will get greater bandwidth throughput. as an example your router ether1 only support 100Mbps, you can bonding with ether2 and finaly you can get more speed to 200Mbps.
         </div>
         <div style="clear:both"></div>
         <div style="float:left; width:440px; padding:0 20px 20px 20px; border-right:1px solid #bbb">
