--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -35,7 +35,7 @@
       margin-top: 0px;
       padding:0;
       line-height: 1.2;
-      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  
+      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  color:#333;
       }
       * {
       box-sizing: border-box;
