--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -16,6 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik">
     <script async defer src="https://buttons.github.io/buttons.js"></script>      
+	 <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style>
       /* ----------------------------------------------
       #################################################
@@ -848,7 +849,6 @@
       <div class="content">
         <div class="list-mangle">
           <div id="reloadads1" style="width:100%; height:90px; margin-top:10px; margin-left:5px; margin-bottom:10px">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- MIKROTIK SCRIPT DB3 -->
             <ins class="adsbygoogle"
               style="display:inline-block;width:728px;height:90px"
@@ -883,7 +883,6 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
           </div>
           <iframe id="change-iframe-url" src=""></iframe>
           <div id="reloadads2" style="width:100%; height:90px; margin-top:10px; margin-left:5px;">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- MIKROTIK SCRIPT DB3 -->
             <ins class="adsbygoogle"
               style="display:inline-block;width:728px;height:90px"
