--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://buananetpbun.github.io">
     <meta name="yandex-verification" content="2185da3345ca44f7" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
+	<script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
     <style>
 /* --------------------------------------------
 ################################################
