--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -91,7 +92,7 @@
       float:left;
       width:100%;
       padding: 20px;
-      background-color:#ddd;
+      background-color:#f9f9f9;
       border-right:1px solid #bbb; 
       border-radius: 5px 5px 0 0 ;  
       }
@@ -109,7 +110,7 @@
       font-size: 2em;
       font-weight: bold;
       margin-bottom:10px;
-      margin-top:20px;
+      margin-top:0px;
       text-align:center
       }
       a:link {
@@ -323,7 +324,7 @@
       }
       /* The Close Button */
       .close {
-      color: #aaaaaa;
+      color: #cccaaa;
       float: right;
       font-size: 30px;
       font-weight: bold;
@@ -379,8 +380,8 @@
         <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
         <table>
           <tr>
-            <th style="background-color:#aaa; font-size:18px">Mikrotik Port Service</th>
-            <th style="background-color:#aaa; font-size:18px">Description</th>
+            <th style="background-color:#ccc; font-size:16px">Mikrotik Port Service</th>
+            <th style="background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
             <td style="width:300px">
@@ -504,8 +505,8 @@
             </td>
           </tr>
           <tr>
-            <th style="background-color:#aaa; font-size:18px">Advanced Router Security</th>
-            <th style="background-color:#aaa; font-size:18px">Description</th>
+            <th style="background-color:#ccc; font-size:16px">Advanced Router Security</th>
+            <th style="background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
             <td style="width:300px">
@@ -555,8 +556,8 @@
 			</td>
           </tr>
           <tr>
-            <th style="background-color:#aaa; font-size:18px">Optional Router Security</th>
-            <th style="background-color:#aaa; font-size:18px">Description</th>
+            <th style="background-color:#ccc; font-size:16px">Optional Router Security</th>
+            <th style="background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
             <td style="width:300px">
