--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -637,7 +637,7 @@
                      add address=192.168.2.1 list=IP-MODEM<br>
                      /ip firewall filter <br>
                      add action=drop chain=forward disabled=yes dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp comment="MODEM PROTECTED"
-                     add action=drop chain=output disabled=yes dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp comment="MODEM PROTECTED"
+                     add action=drop chain=output disabled=yes dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp
 					 </code>	
                   </td>
                </tr>
