--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -377,7 +377,10 @@
          </div>
          <div class="sidebar">
             <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
-            <table>
+		        <span style="color:red; font-weight:bold; font-size:20px;">Disclaimer!</span> We are not responsible for errors or damage or your router is
+        locked due to deliberate or accidental factors, you should ask for help from a friend who understands trying it.    
+          <br>  <br>  
+			<table>
                <tr>
                   <th style="background-color:#ccc; font-size:16px">Mikrotik Port Service</th>
                   <th style="background-color:#ccc; font-size:16px">Description</th>
