--- a/mikrotik/protect-connection-with-anti-netcut.html
+++ b/mikrotik/protect-connection-with-anti-netcut.html
@@ -21,7 +21,20 @@
 <code class="routeros">/ip firewall address-list add list=netcut address=www.arcai.com
 /ip firewall mangle add action=add-src-to-address-list address-list=NetcutUser address-list-timeout=1h5m chain=prerouting dst-address-list=netcut dst-port=80 protocol=tcp
 /ip firewall filter add action=drop chain=forward comment=NetCut src-address-list=NetcutUser
-/system scheduler add interval=10m name="AutoBlockNetcut"</code>
+/system scheduler add interval=10m name="AutoBlockNetcut"
+
+# Open System Scheduler and enter this script into "AutoBlockNetcut"
+
+local a [/ip firewall address-list get [find list="NetcutUser"] address]
+local b [/ip hotspot active get [find address=$a] mac-address]
+if ($a != "") do={[
+/ip hotspot ip-binding add mac-address="$b" address="$a" type=blocked
+/ip firewall address-list remove [find address="$a"]
+/system scheduler add name ($a)  interval="01:00:00" on "/ip hotspot ip-binding remove [find mac-address=$b]
+/system scheduler remove [find name=$a]"
+]}
+
+</code>
 Credit: Unknown
 </pre>
 <script>if (window.top != window.self){document.getElementById("hidelink").innerHTML = "";} else {document.getElementById("hidelink").innerHTML = "<div class='logo'><span class='logo-left'><a href='https://buananetpbun.github.io/mikrotik'><span style='color:#8E2DE2 !important'>BuanaNETPBun</span>.Github.io</a></span><span class='logo-right'><img style='padding-top:12px' src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false' alt='Hits'/></span><div style='clear: both;'></div></div><div class='header'><span class='header-left'><span style='float:left; margin-right:6px; margin-top:-2px'><a href='https://buananetpbun.github.io/mikrotik/'><img src='https://buananetpbun.github.io/mikrotik/img/logo.png' alt='Mikrotik Script RouterOS'></a></span><span style='color:#fff;font-weight:bold;font-size:20px;margin-top:-2px;'>MIKROTIK SCRIPT ROUTEROS DATABASE</span></span><div style='clear: both;'></div></div>"}</script>
