--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -639,8 +639,8 @@
                      add address=192.168.1.1 list=IP-MODEM<br>
                      add address=192.168.2.1 list=IP-MODEM<br>
                      /ip firewall filter <br>
-                     add action=drop chain=forward disabled=yes dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp comment="MODEM PROTECTED"<br>
-                     add action=drop chain=output disabled=yes dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp
+                     add action=drop chain=forward dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp comment="MODEM PROTECTED"<br>
+                     add action=drop chain=output dst-address-list=IP-MODEM dst-port=21-23,80,443 protocol=tcp
 					 </code>	
                   </td>
                </tr>
