--- a/mikrotik/mikrotik-port-service-ftp-21.html
+++ b/mikrotik/mikrotik-port-service-ftp-21.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mikrotik Port Service FTP 21- MikroTik Script RouterOS</title>
+<title>Mikrotik Port Service FTP 21 - MikroTik Script RouterOS</title>
 <meta content='Mikrotik Port Service FTP 21 - MikroTik RouterOS Script DataBase' name='description'/>
 <meta content='mikrotik script, routeros script, script database, script, mikrotik, routeros, router, hotspot, rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
@@ -16,7 +16,8 @@
 <body>
 <div id="hidelink"></div>
 <h1>Mikrotik Port Service FTP 21 - MikroTik Script RouterOS</h1>
-<pre>Mikrotik provides a standard FTP service that uses ports 20 and 21. FTP is usually used to upload or download router data, such as backup files. FTP authorization using router account user & password. This FTP port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
+<pre>
+Mikrotik provides a standard FTP service that uses ports 20 and 21. FTP is usually used to upload or download router data, such as backup files. FTP authorization using router account user & password. This FTP port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
 
 <code class="routeros"># FTP Port Enable
 /ip service set ftp port=21 address=0.0.0.0/0 disabled=no
@@ -29,4 +30,3 @@ Credit: mikrotik.co.id
 <br>
 </body>
 </html>
-
