--- a/mikrotik/mikrotik-port-service-telnet-21.html
+++ b/mikrotik/mikrotik-port-service-telnet-21.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset='utf-8'/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mikrotik Port Service TELNET 21 - MikroTik Script RouterOS</title>
-<meta content='Mikrotik Port Service TELNET 21 - MikroTik RouterOS Script DataBase' name='description'/>
+<title>Mikrotik Port Service TELNET 23 - MikroTik Script RouterOS</title>
+<meta content='Mikrotik Port Service TELNET 23 - MikroTik RouterOS Script DataBase' name='description'/>
 <meta content='mikrotik script, routeros script, script database, script, mikrotik, routeros, router, hotspot, rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
 <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon"> 
@@ -15,9 +15,9 @@
 </head>  
 <body>
 <div id="hidelink"></div>
-<h1>Mikrotik Port Service TELNET 21 - MikroTik Script RouterOS</h1>
-<pre>It has almost the same function as ssh, but it has some limitations and a low level of security. Usually used for remote routers in the console. MikroTik telnet service uses port 23. This TELNET port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
- is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
+<h1>Mikrotik Port Service TELNET 23 - MikroTik Script RouterOS</h1>
+<pre>
+It has almost the same function as ssh, but it has some limitations and a low level of security. Usually used for remote routers in the console. MikroTik telnet service uses port 23. This TELNET port is often attacked using BRUTE FORCE, you can change the port or disable it when not in use. is often attacked using BRUTE FORCE, you can change the port or disable it when not in use.
 
 <code class="routeros"># TELNET Port Enable
 /ip service set ftp port=23 address=0.0.0.0/0 disabled=no
