--- a/mikrotik/mikrotik-port-service-www-80-webfig.html
+++ b/mikrotik/mikrotik-port-service-www-80-webfig.html
@@ -16,7 +16,8 @@
 <body>
 <div id="hidelink"></div>
 <h1>Mikrotik Port Service WWW 80 Webfig - MikroTik Script RouterOS</h1>
-<pre>	In addition to the remote console and winbox, Mikrotik also provides a way to access the router via a web-base using a browser. The port used is the standard HTTP port, which is port 80, You can change the port or disable it when not in use.
+<pre>
+In addition to the remote console and winbox, Mikrotik also provides a way to access the router via a web-base using a browser. The port used is the standard HTTP port, which is port 80, You can change the port or disable it when not in use.
 
 <code class="routeros"># WWW (webfig) Port Enable
 /ip service set www port=80 address=0.0.0.0/0 disabled=no
