--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -747,6 +747,7 @@
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/only-1-hotspot-id-can-login-together.html" onclick="getcontent(this); return truefalseFunction(x);">Only 1 Hotspot Id Can Login Together</a></p></td></tr> 
 			<!-- P -->
 			<tr><td><span id="P" style="margin-left:5px; font-weight:bold">P</span></td></tr>
+			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/protect-neighbors-discovery.html" onclick="getcontent(this); return truefalseFunction(x);">Protect Neighbors Discovery</a></p></td></tr>	
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/PPPoE-Secret-Random-Username-and-Password.html" onclick="getcontent(this); return truefalseFunction(x);">PPPoE Secret Random Username and Password</a></p></td></tr>
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Port-Forward-for-All-Remote-Desktop.html" onclick="getcontent(this); return truefalseFunction(x);">Port Forward for All Remote Desktop</a></p></td></tr>
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/password-ont-modem-telkom-indihome.html" onclick="getcontent(this); return truefalseFunction(x);">Password and username ONT Modem Telkom Indihome</a></p></td></tr>
