--- a/mikrotik/protect-neighbors-discovery.html
+++ b/mikrotik/protect-neighbors-discovery.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Protect Neighbors Discovery - MikroTik Script RouterOS</title>
-<meta content=Protect Neighbors Discovery - MikroTik RouterOS Script DataBase' name='description'/>
+<meta content='Protect Neighbors Discovery - MikroTik RouterOS Script DataBase' name='description'/>
 <meta content='mikrotik script, routeros script, script database, script, mikrotik, routeros, router, hotspot, rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
 <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon"> 
