--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -543,6 +543,7 @@
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Alignment-Script-that-reads-back-RSSI-with-Beeps.html" onclick="getcontent(this); return truefalseFunction(x);">Alignment Script that "reads back" RSSI with Beeps</a></p></td></tr>
 			<!-- B -->
 			<tr><td><span id="B" style="margin-left:5px; font-weight:bold">B</span></td></tr>
+			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/bootloader-protector.html" onclick="getcontent(this); return truefalseFunction(x);">Bootloader Protector</a></p></td></tr>
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Block-Sites-User-Keywords-Use-The-Dns-Cache.html" onclick="getcontent(this); return truefalseFunction(x);">Block Sites With Keywords Use Dns Cache</a></p></td></tr> 
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Blog-Website-With-Keywords-Use-DNS-Static.html" onclick="getcontent(this); return truefalseFunction(x);">Block Website With Keywords Use DNS Static</a></p></td></tr> 
 			<tr><td><p><a class="linkPress" href="https://buananetpbun.github.io/mikrotik/Bypass-Full-Speed-Local-Transfer-File.html" onclick="getcontent(this); return truefalseFunction(x);">Bypass Full Speed Locat Transfer File</a></p></td></tr> 
