--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/156810656-f4e55c11-c12d-4db0-a626-afb22cd03fd9.png">
     <meta property="og:image:alt" content="MikroTik Policy Based Routing (PBR) or Static Routing Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buananetpbun.github.io/policy-based-routing-website.htmll">
+    <meta property="og:url" content="https://buananetpbun.github.io/policy-based-routing-website.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
