--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -380,7 +380,7 @@
           <input  type="text" id="target-ip" style='width:240px; margin-right:5px' placeholder="192.168.2.1" value="">
         </div>
         <div style="width:260px; float:left">
-          <label>Routing Mark / Table</label>  
+          <label>Routing Mark / Routing Table</label>  
           <input  type="text" id="target-route" style='width:240px' placeholder="Streaming" value="">
         </div>
         <div style="width:130px; float:left">
