--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -376,7 +376,7 @@
         <h1>POLICY BASED ROUTING (PBR) OR STATIC ROUTING FOR WEBSITE</h1>
       </div>
       <div class="sidebar">
-        <div style="width:260px;float:left"><label>Target IP Gateway ISP</label> 
+        <div style="width:260px;float:left"><label>Target IP Gateway ISP / VPN</label> 
           <input  type="text" id="target-ip" style='width:240px; margin-right:5px' placeholder="192.168.2.1" value="">
         </div>
         <div style="width:260px; float:left"> 
