--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -385,9 +385,9 @@
 	  <div style="width:240px;float:left">
 	  <label>Routing Option</label> 
 	      <select style="font-size:15px; width:220px; margin-right:10px" onchange="myFunction()" id="dns-list">
-          <option value="01">Fast Port Mangle Route</option>
-		  <option value="02">Port To IP Route Use RAW</option>
-          <option value="03">Port To IP Route Use Filter</option>
+          <option value="01">Only Port Mangle Routing</option>
+		  <option value="02">Port To IP Routing Use RAW</option>
+          <option value="03">Port To IP Routing Use Filter</option>
           <option disabled value="4">Expert Routing (premium service)</option>
         </select>
 		</div>
